RESOLVED FIXED304097
REGRESSION(304385@main): Broke Apple Internal builds
https://bugs.webkit.org/show_bug.cgi?id=304097
Summary REGRESSION(304385@main): Broke Apple Internal builds
Jonathan Bedard
Reported 2025-12-12 21:41:09 PST
304385@main broke Apple Internal builds because of unified sources. Fix it.
Attachments
Jonathan Bedard
Comment 1 2025-12-12 21:41:10 PST
Jonathan Bedard
Comment 2 2025-12-12 21:42:38 PST
EWS
Comment 3 2025-12-12 21:46:09 PST
Committed 304395@main (13f08e3db65e): <https://commits.webkit.org/304395@main> Reviewed commits have been landed. Closing PR #55346 and removing active labels.
Jonathan Bedard
Comment 4 2025-12-13 07:01:06 PST
EWS
Comment 5 2025-12-13 07:04:06 PST
Committed 304422@main (7be8a65610d8): <https://commits.webkit.org/304422@main> Reviewed commits have been landed. Closing PR #55362 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.