REGRESSION(304385@main): Broke Apple Internal builds https://bugs.webkit.org/show_bug.cgi?id=304097 rdar://166429844

Unreviewed build fix.

* Source/WebCore/Modules/model-element/DDModelPlayer.mm:

Canonical link: https://commits.webkit.org/304395@main